# intrinsical-policy-engine

./: .gitattributes  .gitignore  .pre-commit-config.yaml  BOUNDARIES.md  CHANGELOG.md  MANIFEST.in  NOTICE  PROVENANCE.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
demos/starter/basic/: answers.json
docs/: AUTHORING_ERRORS.md  ENVIRONMENT_COMPATIBILITY.md  MIGRATION_3.md  MINIMUM_AUTHORING_PATH.md  POLICY_SCHEMA.md  SECURITY_AND_LIMITATIONS.md  WRITE_YOUR_FIRST_PACK.md
docs/adr/: 0001-canonical-python-namespace-3.md
frameworks/starter/: FRAMEWORK_VERSION.yml  manifest.yml
frameworks/starter/delivery/profiles/: core_outputs.yml
frameworks/starter/law/content/: articles.yml
frameworks/starter/law/core/: actions.yml  flags.yml  rules.yml
frameworks/starter/law/policy/: audit.yml  dedups.yml  evidence_map.yml  law_calendar.yml  risk_config.yml
frameworks/starter/meta/schemas/: README.md
frameworks/starter/render/config/: backlog_config.yml  context_defaults.yml
frameworks/starter/runtime/: branding.yml  policies.yml  semantics.yml
scripts/: check_public_release.py  validate_template_integrity.py
src/: __init__.py
src/adapters/: __init__.py
src/adapters/contracts/yaml/: __init__.py  contract_validators.py  yaml_contract_adapter.py
src/adapters/export/: __init__.py
src/adapters/export/asana/: __init__.py  asana_exporter.py
src/adapters/export/base/: export_helpers.py
src/adapters/export/bundles/: bundle_exporter.py
src/adapters/export/csv/: csv_exporter.py
src/adapters/export/filesystem/: filesystem_exporter.py
src/adapters/export/jira/: __init__.py  jira_exporter.py
src/adapters/export/linear/: linear_exporter.py
src/adapters/frameworks/: __init__.py  backlog_loader.py  layout_loader.py
src/adapters/logging/: __init__.py  adapters.py
src/adapters/logging/fs/: __init__.py  fs_log.py
src/adapters/quality/: __init__.py  bundle_evidence_validator.py  engine.py  gates.py
src/adapters/security/: __init__.py  gpg_signer.py
src/adapters/store/: __init__.py
src/adapters/store/fs/: __init__.py  fs_store.py
src/adapters/ui/: __init__.py  server.py
src/app/cli/: __init__.py  __main__.py  main.py  wizard.py
src/app/cli/commands/: __init__.py  _helpers.py  ci_runner.py  core.py  dev.py  inspect.py  ops.py  validate.py
src/app/config/: artifact_names.py  constants.py  context.py  paths.py  template_context.py
src/app/export/: __init__.py  artifacts.py  orchestrator.py
src/app/factories/: __init__.py  graph_factory.py
src/app/gating/: __init__.py  export_gate.py  public_bundle.py
src/app/rendering/: README.md  __init__.py  artifact_renderer.py  templating.py
src/app/template_validation/: __init__.py  template_validator.py
src/app/use_cases/: __init__.py  bundle_orchestrator.py  ops.py  ops_fs.py  seal.py
src/common/: __init__.py  constants.py  hashing.py  io_safety.py  io_utils.py  jinja_env.py  path_utils.py  sanitization.py
src/common/text/: front_matter.py
src/common/validation/: __init__.py
src/domain/: __init__.py  constants.py  contract_models.py  framework_contract.py  i18n_defaults.py  ports.py  types.py
src/domain/bundles/: __init__.py  backlog_config.py  context.py  context_builders.py  models.py  registry.py  view_models.py
src/domain/core/: subject_profile.py
src/domain/coverage/: __init__.py  context.py
src/domain/graph/: __init__.py  adapters.py  builder.py  export.py  filters.py  models.py  ports.py  queries.py
src/domain/services/: __init__.py  article_overlay.py  artifact_selector.py  assess_service.py  coherence_checker.py  date_arithmetic.py  dedup_service.py  derivation_closure.py  duedate_service.py  flag_article_index.py  integrity.py  metrics.py  outcome_classifier.py  questionnaire_engine.py  routing_router.py  rule_engine.py  seal_service.py  tracer.py
src/domain/simulation/: logic.py  models.py  types.py
src/domain/validation/: __init__.py  evidence_validator.py  filesystem_interface.py
src/intrinsical_policy_engine/: __init__.py  __main__.py
src/intrinsical_policy_engine/adapters/contracts/: __init__.py
src/intrinsical_policy_engine/adapters/frameworks/: backlog_loader.py  layout_loader.py
src/intrinsical_policy_engine/adapters/logging/: __init__.py  adapters.py  protocol.py
src/intrinsical_policy_engine/adapters/quality/: bundle_evidence_validator.py  engine.py  gates.py
src/intrinsical_policy_engine/adapters/security/: gpg_signer.py
src/intrinsical_policy_engine/adapters/ui/: __init__.py  constants.py  server.py  templates.py
src/intrinsical_policy_engine/api/: __init__.py  engine.py  errors.py  models.py  packs.py
src/intrinsical_policy_engine/app/: __init__.py
src/intrinsical_policy_engine/app/cli/: __main__.py  main.py  (+1 more)
src/intrinsical_policy_engine/common/: cache.py  constants.py  hashing.py  io_safety.py  io_utils.py  json_utils.py
src/intrinsical_policy_engine/domain/: constants.py  contract_models.py  exceptions.py  framework_contract.py  framework_layout.py  ports.py  strictness.py  types.py
tests/smoke/: test_starter_pack_smoke.py
tests/unit/: test_artifact_context_provenance.py  test_bundle_exporter_paths.py  test_cli_command_surface.py  test_environment_boundary.py  test_evidence_directory_boundary.py  test_export_policy_gate.py  test_io_safety.py  test_manifest_filesystem_security.py  test_pack_compatibility.py  test_public_api_facade.py  test_public_gate_report.py  test_public_release_guard.py  test_python_package_contract.py  test_quality_engine.py  test_rule_engine.py  test_seal_roundtrip.py  test_template_integrity_boundary.py  test_when_depth_limit.py  test_yaml_adapter_typed_lint.py
tests/unit/architecture/: test_domain_no_direct_io.py
tests/unit/core/: test_date_arithmetic.py  test_dedup_service_boundary.py  test_engine_version_metadata.py  test_export_namespace.py  test_framework_layout.py  test_hashing_contracts.py  test_metrics.py  test_parser_edges.py  test_plan_hash_integrity.py  test_plan_type_validation.py  test_tracer_privacy.py  test_when_parser_fuzzing.py  test_when_parser_precedence.py
(+128 files in other folders)
