[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "intrinsical-policy-engine"
version = "2.0.1+public.0"
description = "Framework-neutral policy/rules assessment engine and export toolkit"
readme = "README.md"
authors = [{ name = "Pablo P.C." }]
requires-python = ">=3.11"  # CI uses 3.12, but we support 3.11+
keywords = ["policy-engine", "rules-as-code", "assessment", "audit", "traceability", "CLI", "YAML"]
license = "MPL-2.0"
dependencies = [
    "jinja2==3.1.6",
    "jsonschema==4.25.1",
    "pyyaml==6.0.3",
    "networkx>=3.0,<4.0",
    "pydantic>=2.12.3",
]

[project.scripts]
ipe = "src.app.cli.main:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.5.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.14.0",
    "hypothesis>=6.100.0",
    "types-PyYAML>=6.0.12",
    "types-jsonschema>=4.23.0",
]
ui = [
    "flask>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]
namespaces = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "BLE", "B", "C90", "SIM", "RUF"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"src/adapters/contracts/yaml/contract_validators.py" = ["C901"]
"tests/**/*" = ["E501"]
"src/adapters/ui/server.py" = ["E501"]
"demos/**/*" = ["E501"]
"src/app/constants.py" = ["E501"]
"scripts/check_public_release.py" = ["E501"]
# RUF012: ClassVar annotations pending — tracked as debt
"src/adapters/export/filesystem/strategies/manifest.py" = ["RUF012"]
"src/adapters/quality/engine.py" = ["RUF012"]
"src/adapters/quality/gates.py" = ["RUF012"]
"src/app/cli/commands/_helpers.py" = ["RUF012"]
"src/app/cli/commands/dev.py" = ["RUF012"]
"src/app/gating/public_bundle.py" = ["RUF012"]
"src/domain/graph/__init__.py" = ["RUF012"]
"src/domain/services/coherence_checker.py" = ["RUF012"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = "."

[tool.coverage.report]
fail_under = 20

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
