[build-system]
# SPDX license expressions in ``project.license`` require PEP 639 support.
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "intrinsical-policy-engine"
version = "3.0.0a1"
description = "Framework-neutral policy/rules assessment engine and export toolkit"
readme = "README.md"
authors = [{ name = "Pablo P.C." }]
requires-python = ">=3.11"  # CI uses 3.12, but we support 3.11+
keywords = ["policy-engine", "rules-as-code", "assessment", "audit", "traceability", "CLI", "YAML"]
license = "MPL-2.0"
dependencies = [
    "jinja2==3.1.6",
    "jsonschema==4.25.1",
    "pyyaml==6.0.3",
    "networkx>=3.0,<4.0",
    "packaging>=24.0,<27.0",
    "pydantic>=2.12.3,<3.0.0",
]

[project.scripts]
ipe = "intrinsical_policy_engine.app.cli.main:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.5.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.14.0",
    "hypothesis>=6.100.0",
    "types-PyYAML>=6.0.12",
    "types-jsonschema>=4.23.0",
]
ui = [
    "flask>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["intrinsical_policy_engine*"]
namespaces = false

[tool.setuptools.package-data]
intrinsical_policy_engine = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "BLE", "B", "C90", "SIM", "RUF"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"src/intrinsical_policy_engine/adapters/contracts/yaml/contract_validators.py" = ["C901"]
"tests/**/*" = ["E501"]
"src/intrinsical_policy_engine/adapters/ui/server.py" = ["E501"]
"demos/**/*" = ["E501"]
"src/intrinsical_policy_engine/app/constants.py" = ["E501"]
"scripts/check_public_release.py" = ["E501"]
# RUF012: ClassVar annotations pending — tracked as debt
"src/intrinsical_policy_engine/adapters/export/filesystem/strategies/manifest.py" = ["RUF012"]
"src/intrinsical_policy_engine/adapters/quality/engine.py" = ["RUF012"]
"src/intrinsical_policy_engine/adapters/quality/gates.py" = ["RUF012"]
"src/intrinsical_policy_engine/app/cli/commands/_helpers.py" = ["RUF012"]
"src/intrinsical_policy_engine/app/cli/commands/dev.py" = ["RUF012"]
"src/intrinsical_policy_engine/app/gating/public_bundle.py" = ["RUF012"]
"src/intrinsical_policy_engine/domain/graph/__init__.py" = ["RUF012"]
"src/intrinsical_policy_engine/domain/services/coherence_checker.py" = ["RUF012"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = "src"

[tool.coverage.report]
fail_under = 19

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
